# news-digest

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  config.yaml  news_pipeline.py  pyproject.toml  requirements.txt  send_telegram.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily_digest.yml
output/: digest_2026-03-24.txt  digest_2026-03-25.txt  digest_2026-03-26.txt  digest_2026-03-28.txt  digest_2026-03-29.txt  digest_2026-03-31.txt  digest_2026-04-01.txt  digest_2026-04-02.txt  digest_2026-04-03.txt  digest_2026-04-04.txt  digest_2026-04-05.txt  digest_2026-04-06.txt  digest_2026-04-07.txt  digest_2026-04-09.txt  digest_2026-04-11.txt  digest_2026-04-12.txt  digest_2026-04-13.txt  digest_2026-04-14.txt  digest_2026-04-15.txt  digest_2026-04-16.txt  digest_2026-04-17.txt  digest_2026-04-18.txt  digest_2026-04-19.txt  digest_2026-04-20.txt  digest_2026-04-21.txt  digest_2026-04-22.txt  digest_2026-04-23.txt  digest_2026-04-24.txt  digest_2026-04-25.txt  digest_2026-04-26.txt  digest_2026-04-27.txt  digest_2026-04-29.txt  digest_2026-04-30.txt  digest_2026-05-01.txt  digest_2026-05-02.txt  digest_2026-05-03.txt  digest_2026-05-04.txt  digest_2026-05-05.txt  digest_2026-05-06.txt  digest_2026-05-07.txt  (+67 more)
