[project]
name = "news-digest"
version = "0.1.0"
description = "News feed pipeline — aggregates RSS feeds and generates AI-powered digests via LangChain + Groq"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Faustze" },
]
dependencies = [
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Faustze/news-digest"

[project.scripts]
news-digest = "news_pipeline:main"

[tool.uv]
dev-dependencies = []
